<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeMenuOption"
        android:title="@string/home"
        android:icon="@drawable/icon_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/songsMenuOption"
        android:title="@string/songs"
        android:icon="@drawable/icon_songs"
        app:showAsAction="always" />

    <item
        android:id="@+id/albumsMenuOption"
        android:title="@string/albums"
        android:icon="@drawable/icon_album"
        app:showAsAction="always" />

    <item
        android:id="@+id/artistsMenuOption"
        android:title="@string/artists"
        android:icon="@drawable/icon_person"
        app:showAsAction="always" />

</menu>