<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<TextView
		android:id="@+id/songTitle"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:fontFamily="@font/oxygen_bold"
		android:paddingStart="12dp"
		android:paddingTop="8dp"
		android:paddingEnd="8dp"
		android:paddingBottom="8dp"
		android:textAppearance="@style/TextAppearance.Obwei.Headline3"
		android:textSize="24sp"
		app:layout_constraintBottom_toTopOf="@+id/addToQueueOption"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		app:layout_constraintVertical_chainStyle="packed"
		tools:text="SongTitle" />

	<TextView
		android:id="@+id/addToQueueOption"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="@font/oxygen"
		android:gravity="center"
		android:padding="4dp"
		android:text="@string/addToQueue"
		android:textAppearance="@style/TextAppearance.Obwei.Option"
		android:visibility="visible"
		app:layout_constraintBottom_toTopOf="@+id/addToPlaylistOption"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/songTitle" />

	<TextView
		android:id="@+id/addToPlaylistOption"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="@font/oxygen"
		android:gravity="center"
		android:padding="4dp"
		android:text="@string/addToPlaylist"
		android:textAppearance="@style/TextAppearance.Obwei.Option"
		android:visibility="visible"
		app:layout_constraintBottom_toTopOf="@+id/goToAlbumOption"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/addToQueueOption" />

	<TextView
		android:id="@+id/goToAlbumOption"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="@font/oxygen"
		android:gravity="center"
		android:padding="4dp"
		android:text="@string/goToAlbum"
		android:textAppearance="@style/TextAppearance.Obwei.Option"
		android:visibility="visible"
		app:layout_constraintBottom_toTopOf="@+id/goToArtistOption"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/addToPlaylistOption" />

	<TextView
		android:id="@+id/goToArtistOption"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="@font/oxygen"
		android:gravity="center"
		android:padding="4dp"
		android:text="@string/goToArtist"
		android:textAppearance="@style/TextAppearance.Obwei.Option"
		android:visibility="visible"
		app:layout_constraintBottom_toTopOf="@+id/editMetadataOption"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/goToAlbumOption" />

	<TextView
		android:id="@+id/editMetadataOption"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="@font/oxygen"
		android:gravity="center"
		android:padding="4dp"
		android:text="@string/editMetadata"
		android:textAppearance="@style/TextAppearance.Obwei.Option"
		android:visibility="visible"
		app:layout_constraintBottom_toTopOf="@+id/addToBlacklistOption"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/goToArtistOption" />

	<TextView
		android:id="@+id/addToBlacklistOption"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="@font/oxygen"
		android:gravity="center"
		android:padding="4dp"
		android:text="@string/addToBlacklist"
		android:textAppearance="@style/TextAppearance.Obwei.Option"
		android:textColor="@color/colorWarn"
		android:visibility="visible"
		app:layout_constraintBottom_toTopOf="@+id/removeFromDiskOption"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editMetadataOption" />

	<TextView
		android:id="@+id/removeFromDiskOption"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="@font/oxygen"
		android:gravity="center"
		android:padding="4dp"
		android:text="@string/removeFromDisk"
		android:textAppearance="@style/TextAppearance.Obwei.Option"
		android:textColor="@color/colorDanger"
		android:visibility="visible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/addToBlacklistOption" />

</androidx.constraintlayout.widget.ConstraintLayout>