<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<RelativeLayout
		android:id="@+id/noContentView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintTop_toBottomOf="@id/title"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:visibility="visible">

		<TextView
			android:id="@+id/noContentMsg"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:textAppearance="@style/TextAppearance.Obwei.Headline2"
			android:text="@string/no_playlists_found"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/noContentMsg"
			android:layout_centerHorizontal="true"
			android:textSize="12sp"
			android:text="@string/playlistTip"/>

		<ImageView
			android:id="@id/noContentImage"
			android:layout_width="75dp"
			android:layout_height="100dp"
			android:tint="@color/light_gray"
			app:srcCompat="@drawable/icon_plus_playlist"
			android:layout_above="@id/noContentMsg"
			android:layout_centerHorizontal="true"/>

	</RelativeLayout>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/recyclerNav"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:clipToPadding="false"
		android:layout_marginTop="8dp"
		android:paddingStart="@dimen/minUnit"
		android:paddingEnd="@dimen/minUnit"
		android:paddingBottom="@dimen/minUnit"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toBottomOf="@id/title"
		tools:listitem="@layout/item_playlist"/>


	<View
		android:id="@+id/divisor"
		android:layout_width="0dp"
		android:layout_height="1dp"
		android:background="@color/colorAccent"
		app:layout_constraintWidth_percent="0.5"
		app:layout_constraintTop_toBottomOf="@id/title"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"/>

	<TextView
		android:id="@+id/title"
		android:textAppearance="@style/TextAppearance.Obwei.Headline1"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:paddingBottom="4dp"
		android:paddingTop="8dp"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/headerNav"
		android:text="Playlists"/>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/headerNav"
		android:layout_width="0dp"
		android:layout_height="@dimen/headerNavSize"
		android:background="@drawable/drawable_bg_home"
		android:elevation="16dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent">

		<ImageView
			android:id="@+id/settings"
			android:layout_width="?actionBarSize"
			android:layout_height="?actionBarSize"
			android:padding="8dp"
			android:alpha="0.618"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:srcCompat="@drawable/icon_edit_list"/>

		<TextView
			android:textAppearance="@style/TextAppearance.Obwei.Headline1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/appName"
			android:textColor="#000"
			android:fontFamily="@font/oxygen_bold"
			android:alpha="0.618"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"/>

		<ImageView
			android:id="@+id/addPlaylist"
			android:layout_width="?actionBarSize"
			android:layout_height="?actionBarSize"
			android:padding="8dp"
			android:alpha="0.618"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:srcCompat="@drawable/icon_plus_playlist"/>

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>